<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    android:id="@+id/viewMain"
    tools:showIn="@layout/app_bar_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

    <android.support.constraint.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Button
            android:id="@+id/sign_in"
            android:onClick="signIn"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="56dp"
            android:background="@drawable/button_background"
            android:text="@string/log_in"
            android:textColor="#FFF5F5"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/sign_up"
            android:onClick="signUp"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="56dp"
            android:background="@drawable/button_background"
            android:text="@string/sign_up"
            android:textColor="#FFF5F5"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_csgo"
                android:onClick="noticia1"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="3.5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.428"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="102dp"
                    android:contentDescription="TODO"
                    android:src="@drawable/cardview_csgo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="165dp"
                    android:text="@string/titulo_noticia_1"
                    android:textColor="@color/colorTitle"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/noticia1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="9dp"
                    android:layout_marginTop="200dp"
                    android:text="@string/noticia_1"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/share"
                    android:onClick="share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="270dp"
                    android:text="@string/share"
                    android:textColor="@color/colorShare" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_csgo_major"
                android:onClick="noticia2"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="3.5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.428"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.155">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="102dp"
                    android:contentDescription="TODO"
                    android:src="@drawable/cardview_csgo_major" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="165dp"
                    android:text="@string/titulo_noticia_2"
                    android:textColor="@color/colorTitle"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/noticia2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="9dp"
                    android:layout_marginTop="200dp"
                    android:text="@string/noticia_2"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/share2"
                    android:onClick="share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="270dp"
                    android:text="@string/share"
                    android:textColor="@color/colorShare" />
            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/show_more"
                android:onClick="showMore"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/button_background"
                android:text="More..."
                android:textColor="#FFF5F5"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
