<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".nav_item.MapsActivity"
    tools:showIn="@layout/app_bar_maps">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <android.support.v7.widget.CardView
                android:id="@+id/mirage_map"
                android:onClick="mirage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="270dp"
                    android:layout_marginTop="-40dp"
                    android:src="@drawable/cardview_map_mirage" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/de_mirage"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginTop="205dp"
                    android:textAlignment="center" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/nuke_map"
                android:onClick="nuke"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="270dp"
                    android:layout_marginTop="-40dp"
                    android:src="@drawable/cardview_map_nuke" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/de_nuke"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginTop="205dp"
                    android:textAlignment="center" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/inferno_map"
                android:onClick="inferno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="270dp"
                    android:layout_marginTop="-40dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/cardview_map_inferno" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/de_inferno"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginTop="205dp"
                    android:textAlignment="center" />

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>